# voice-keyboard

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN-GUI.md  PLAN-RELEASE.md  PLAN.md  README.md  build.rs
.beads/: issues.jsonl
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
installer/linux/: voice-typer.desktop
installer/macos/: Info.plist
installer/windows/: LICENSE.rtf  README.txt  voice-typer.wxs
scripts/: analyze-reports.sh  reset-permissions.sh  setup-linux.sh  setup-macos.sh  setup-windows.ps1  sync-logs.sh
src/: audio.rs  config.rs  hotkey.rs  inject.rs  lib.rs  main.rs  transcribe.rs  volume.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/src/: audio.rs  debug_log.rs  main.rs  whisper.rs
src/gui/: app.rs  mod.rs  state.rs  tray.rs
src/gui/input/: gamepad.rs  hid.rs  mod.rs
src/gui/tabs/: mod.rs  whisper.rs
src/updater/: logger.rs  mod.rs  state.rs
tests/: transcription_test.rs  vad_test.rs  voice_typer_test.rs  whisper_test.rs
ui/: app.js  index.html  styles.css
