[package]
name = "voice-keyboard"
version = "0.1.0"
edition = "2021"
authors = ["Alex Mak"]
description = "Push-to-talk voice keyboard with local Whisper recognition"
license = "MIT"
repository = "https://github.com/alexmak/voice-keyboard"

[dependencies]
# Whisper speech recognition (optional, needs cmake)
whisper-rs = { version = "0.15", optional = true }

# Audio - WAV file handling (cross-platform)
hound = "3.5"

# Clipboard (cross-platform)
arboard = "3"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# macOS-only dependencies (require system frameworks, not available on Linux CI)
[target.'cfg(target_os = "macos")'.dependencies]
cpal = "0.15"       # Audio recording (uses CoreAudio)
rdev = "0.5"        # Global hotkeys (uses IOKit)
enigo = "0.2"       # Keyboard simulation (requires Accessibility)
tray-icon = "0.19"  # System tray
cocoa = "0.26"      # macOS clipboard for files
objc = "0.2"        # Objective-C runtime

# Minimal binary - standalone, no whisper dependency
[[bin]]
name = "minimal"
path = "src/bin/minimal.rs"

# Voice recorder binary - record audio and paste as OGG file
[[bin]]
name = "voice-recorder"
path = "src/bin/voice_recorder.rs"

# Voice typer binary - record, transcribe with Whisper, paste text
[[bin]]
name = "voice-typer"
path = "src/bin/voice_typer.rs"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"

[features]
default = []
whisper = ["whisper-rs"]
coreml = ["whisper-rs/coreml"]
metal = ["whisper-rs/metal"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.bundle]
name = "Voice Keyboard"
identifier = "com.alexmak.voice-keyboard"
icon = ["icons/icon.icns"]
category = "public.app-category.productivity"
short_description = "Voice to text input"
