[package]
name = "voice-keyboard"
version = "0.1.0"
edition = "2021"
authors = ["Alex Mak"]
description = "Push-to-talk voice keyboard with local Whisper recognition"
license = "LicenseRef-Proprietary"
repository = "https://github.com/alexmak/voice-keyboard"

[dependencies]
# Whisper speech recognition (optional, needs cmake)
whisper-rs = { version = "0.15", optional = true }

# Audio - WAV file handling (cross-platform)
hound = "3.5"

# Clipboard (cross-platform)
arboard = "3"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
indicatif = "0.17"  # Progress bar

# Timestamps for logging
chrono = "0.4"

# Environment variables (.env file)
dotenvy = "0.15"

# Base64 encoding for audio
base64 = "0.22"

# Cross-platform audio and input
cpal = "0.15"           # Audio recording (CoreAudio/ALSA/WASAPI)
rdev = "0.5"            # Global hotkeys
enigo = "0.2"           # Keyboard simulation

# macOS-only dependencies
[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.19"      # System tray
cocoa = "0.26"          # macOS clipboard for files
objc = "0.2"            # Objective-C runtime
core-graphics = { version = "0.24", features = ["elcapitan"] }  # CGEvent with post_to_pid

# Minimal binary - standalone, no whisper dependency
[[bin]]
name = "minimal"
path = "src/bin/minimal.rs"

# Voice recorder binary - record audio and paste as OGG file
[[bin]]
name = "voice-recorder"
path = "src/bin/voice_recorder.rs"

# Voice typer binary - record, transcribe with Whisper, paste text
[[bin]]
name = "voice-typer"
path = "src/bin/voice_typer.rs"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"

[features]
default = []
whisper = ["whisper-rs"]
coreml = ["whisper-rs/coreml"]
metal = ["whisper-rs/metal"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.bundle]
name = "Voice Keyboard"
identifier = "com.alexmak.voice-keyboard"
icon = ["icons/icon.icns"]
category = "public.app-category.productivity"
short_description = "Voice to text input"

# Linux DEB package configuration (cargo-deb)
[package.metadata.deb]
maintainer = "Alex Mak <alex@example.com>"
copyright = "2024, Alex Mak"
license-file = ["LICENSE", "0"]
extended-description = """\
Voice to text input using local Whisper AI. \
Push-to-talk: hold a hotkey to record, release to transcribe. \
Works offline, no internet required for transcription."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/voice-typer", "usr/bin/", "755"],
    ["installer/linux/voice-typer.desktop", "usr/share/applications/", "644"],
    ["installer/linux/icon.png", "usr/share/icons/hicolor/256x256/apps/voice-typer.png", "644"],
    ["README.md", "usr/share/doc/voice-typer/README", "644"],
]
depends = "$auto"

# Linux RPM package configuration (cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/voice-typer", dest = "/usr/bin/voice-typer", mode = "755" },
    { source = "installer/linux/voice-typer.desktop", dest = "/usr/share/applications/voice-typer.desktop", mode = "644" },
    { source = "installer/linux/icon.png", dest = "/usr/share/icons/hicolor/256x256/apps/voice-typer.png", mode = "644" },
]

[package.metadata.generate-rpm.requires]
alsa-lib = "*"
libX11 = "*"
libXtst = "*"
