[package]
name = "voice-keyboard"
version = "0.5.1"
edition = "2021"
authors = ["Alex Mak"]
description = "Push-to-talk voice keyboard with local Whisper recognition"
license = "LicenseRef-Proprietary"
repository = "https://github.com/alexmak/voice-keyboard"
autobins = false

[dependencies]
# Whisper speech recognition (optional, needs cmake)
whisper-rs = { version = "0.15", optional = true }

# Audio - WAV file handling (cross-platform)
hound = "3.5"

# Audio - OGG/Opus encoding for API uploads (optional, requires libopus)
ogg-opus = { version = "0.1", optional = true }

# Clipboard (cross-platform)
arboard = "3"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
indicatif = "0.17"  # Progress bar

# Timestamps for logging
chrono = { version = "0.4", features = ["serde"] }

# Environment variables (.env file)
dotenvy = "0.15"

# Base64 encoding for audio
base64 = "0.22"

# Cross-platform audio and input
cpal = "0.15"           # Audio recording (CoreAudio/ALSA/WASAPI)
rdev = { version = "0.5", default-features = false }  # Global hotkeys; unstable_grab added per-platform below
enigo = "0.2"           # Keyboard simulation

# GUI dependencies (optional, enabled with --features gui)
egui = { version = "0.30", optional = true }
eframe = { version = "0.30", optional = true, default-features = false, features = ["glow", "x11", "wayland"] }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }  # Icon loading

# USB HID devices support (optional, for SpeechMike etc.)
hidapi = { version = "2.6", optional = true }

# Gamepad support (optional)
gilrs = { version = "0.11", optional = true }

# Auto-update from GitHub Releases (optional)
self_update = { version = "0.41", optional = true, default-features = false, features = ["rustls", "archive-tar", "archive-zip", "compression-flate2"] }
# Binary replacement (Windows file locking workaround)
self-replace = { version = "1.5", optional = true }
# Semantic version comparison
semver = { version = "1.0", optional = true }
# SHA256 checksum verification for updates
sha2 = { version = "0.10", optional = true }
# Archive extraction
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
zip = { version = "2.2", optional = true, default-features = false, features = ["deflate"] }

# macOS-only dependencies (including tray)
[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = { version = "0.19", optional = true }
muda = { version = "0.15", optional = true }
cocoa = "0.26"          # macOS clipboard for files
objc = "0.2"            # Objective-C runtime
core-graphics = { version = "0.24", features = ["elcapitan"] }  # CGEvent with post_to_pid
core-foundation = "0.9"  # CFString for Accessibility API
rdev = { version = "0.5", features = ["unstable_grab"] }  # grab() for key suppression

# Windows-only dependencies (tray)
[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = { version = "0.19", optional = true }
muda = { version = "0.15", optional = true }

# Linux tray requires GTK dev packages (libgtk-3-dev, libappindicator3-dev)
[target.'cfg(target_os = "linux")'.dependencies]
tray-icon = { version = "0.19", optional = true }
muda = { version = "0.15", optional = true }

# Minimal binary - standalone, no whisper dependency
[[bin]]
name = "minimal"
path = "src/bin/minimal.rs"

# Voice recorder binary - record audio and paste as OGG file
[[bin]]
name = "voice-recorder"
path = "src/bin/voice_recorder.rs"

# Voice typer binary - record, transcribe with Whisper, paste text
[[bin]]
name = "voice-typer"
path = "src/bin/voice_typer.rs"

# Launcher binary - checks for updates and launches voice-typer
[[bin]]
name = "voice-typer-launcher"
path = "src/bin/launcher.rs"
required-features = ["updater"]

[build-dependencies]
serde_json = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"

[features]
default = []
whisper = ["whisper-rs"]
coreml = ["whisper-rs/coreml"]
metal = ["whisper-rs/metal"]
opus = ["ogg-opus"]  # OGG/Opus encoding (requires libopus: brew install opus)
# GUI features
gui-core = ["egui", "eframe", "image"]  # Settings window only
gui-tray = ["tray-icon", "muda"]  # System tray (Linux requires libgtk-3-dev)
gui-input = ["hidapi", "gilrs"]  # USB HID + gamepad hotkey binding
gui = ["gui-core", "gui-tray", "gui-input"]  # Full GUI with all features
# Auto-update feature
updater = ["self_update", "self-replace", "semver", "flate2", "tar", "zip", "sha2"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.bundle]
name = "Voice Keyboard"
identifier = "com.alexmak.voice-keyboard"
icon = ["icons/icon.icns"]
category = "public.app-category.productivity"
short_description = "Voice to text input"

# Linux DEB package configuration (cargo-deb)
[package.metadata.deb]
maintainer = "Alex Mak <alex@example.com>"
copyright = "2024, Alex Mak"
license-file = ["LICENSE", "0"]
extended-description = """\
Voice to text input using local Whisper AI. \
Push-to-talk: hold a hotkey to record, release to transcribe. \
Works offline, no internet required for transcription."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/voice-typer", "usr/bin/", "755"],
    ["installer/linux/voice-typer.desktop", "usr/share/applications/", "644"],
    ["installer/linux/icon.png", "usr/share/icons/hicolor/256x256/apps/voice-typer.png", "644"],
    ["README.md", "usr/share/doc/voice-typer/README", "644"],
]
depends = "$auto"

# Linux RPM package configuration (cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/voice-typer", dest = "/usr/bin/voice-typer", mode = "755" },
    { source = "installer/linux/voice-typer.desktop", dest = "/usr/share/applications/voice-typer.desktop", mode = "644" },
    { source = "installer/linux/icon.png", dest = "/usr/share/icons/hicolor/256x256/apps/voice-typer.png", mode = "644" },
]

[package.metadata.generate-rpm.requires]
alsa-lib = "*"
libX11 = "*"
libXtst = "*"
